cli/tests/snapshot/snapshots/snapshot__eval_stderr_destructuring_nonexistent_idents.ncl.snap
---
source: cli/tests/snapshot/main.rs
expression: err
---
error: type error: missing row `b`
  ┌─ [INPUTS_PATH]/errors/destructuring_nonexistent_idents.ncl:4:18
  │
4 │   let { a, b } = { a = 1, c = 2 } in
  │                  ^^^^^^^^^^^^^^^^ this expression
  │
  = Expected an expression of type `{ b : _a, a : _b }`, which contains the field `b`
  = Found an expression of type `{ c : _c, a : _d }`, which does not contain the field `b`


